Fixed spacing issue between the 'Add Time Period' buttons and other form elements.
git-svn-id: svn+ssh://cvs1/svn/listen/trunk@1655 4692729f-32a0-46b7-9832-1bf53c4881b5

--- a/controller/src/main/webapp-gui/resources/app/css/settings.css
+++ b/controller/src/main/webapp-gui/resources/app/css/settings.css
@@ -34,3 +34,12 @@ fieldset.period-selector button {
     float: left;
     width: 150px;
 }
+
+#addEmailTimeRestriction,
+#addSmsTimeRestriction {
+    margin-left: 20px;
+}
+
+fieldset.time-restrictions {
+    margin-bottom: 10px;
+}
